--- a/MICHELOB-TABLET/index.html
+++ b/MICHELOB-TABLET/index.html
@@ -36,7 +36,7 @@
             <input id="correo" type="email" placeholder="E-mail" class="form-control w-50 my-3 ">
             <input id="celular" type="text" placeholder="Celular" class="form-control w-50 my-3 ">
             <input id="tienda" type="text" placeholder="Tienda" class="form-control w-50 my-3 ">
-            <input id="puntos" type="number" placeholder="Puntos" class="form-control w-10 my-3 ">
+            <input id="puntos" placeholder="Puntos" class="form-control w-10 my-3 " type=time min="0:00" max="100:59">
             <button id="btn" class="btn btn-success boton" type="button" onclick="guardar()">Guardar</button>
             <div id="msje" class=" my-3"></div>
         </div>
