--- a/MICHELOB-TABLET/index.html
+++ b/MICHELOB-TABLET/index.html
@@ -1,74 +1,93 @@
-<!doctype html>
-<html lang="es">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>prueba</title>
-    <link rel="stylesheet" href="./style.css">
-    <!-- Firestore -->
-    <script src="https://www.gstatic.com/firebasejs/6.6.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.6.2/firebase-firestore.js"></script>
-    <script src="https://kit.fontawesome.com/37ef4fca07.js" crossorigin="anonymous"></script>
+    <title>Login V1</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--===============================================================================================-->
+    <link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="css/util.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <!--===============================================================================================-->
 </head>
 
 <body>
-    <div class=" mt-5 part1 ">
-        <div class="centered p-3">
-            <h1 class="">Usuarios</h1>
-            <div class="input-group mb-3 w-50 my-3">
-                <input id="boleta" type="text" placeholder="Numero de boleta o factura" class="form-control ">
-                <div class="input-group-append">
-                    <button class="btn btn-outline-secondary btn-warning" type="button" id="button-buscar-bol">Buscar</button>
+
+    <div class="limiter">
+        <div class="container-login100">
+            <div class="wrap-login100">
+                <div class="login100-pic js-tilt" data-tilt>
+                    <img src="images/img-01.png" alt="IMG">
                 </div>
+
+                <form class="login100-form validate-form">
+                    <span class="login100-form-title">
+				Michelob	<span class="ultra">ACTIVACIÓN </span>
+                    </span>
+
+                    <div class="wrap-input100 validate-input" data-validate="Ingresa un Usuario Valido">
+                        <input class="input100" type="text" name="user" autocomplete="username" placeholder="Usuario">
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+							<i class="fa fa-envelope" aria-hidden="true"></i>
+						</span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Ingresa contraseña Valida">
+                        <input class="input100" type="password" name="pass" autocomplete="new-password" placeholder="Contraseña">
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+							<i class="fa fa-lock" aria-hidden="true"></i>
+						</span>
+                    </div>
+
+                    <div class="container-login100-form-btn">
+                        <button class="login100-form-btn">
+							Ingresa  <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+						</button>
+                    </div>
+
+
+                    <div class="text-center p-t-136">
+
+                    </div>
+                </form>
             </div>
-            <div class="input-group mb-3 w-50 my-3">
-                <input id="dni" type="number" class="form-control" placeholder="Dni" aria-label="Recipient's username" aria-describedby="button-addon2">
-                <div class="input-group-append">
-                    <button class="btn btn-outline-secondary btn-warning" type="button" id="button-buscar-dni">Buscar</button>
-                </div>
-            </div>
-            <input id="nombre" type="text" placeholder="Nombre" class="form-control w-50 my-3 ">
-            <input id="correo" type="email" placeholder="E-mail" class="form-control w-50 my-3 ">
-            <input id="celular" type="text" placeholder="Celular" class="form-control w-50 my-3 ">
-            <input id="tienda" type="text" placeholder="Tienda" class="form-control w-50 my-3 ">
-            <input id="puntos" placeholder="Puntos" class="form-control w-10 my-3 " type=time min="0:00" max="100:59">
-            <button id="btn" class="btn btn-success boton" type="button" onclick="guardar()">Guardar</button>
-            <div id="msje" class=" my-3"></div>
         </div>
     </div>
-    <div class="table-cont">
-        <table class="table table-bordered my-5">
-            <thead>
-                <tr class="">
-                    <!-- <th scope="col">#</th> -->
-                    <th scope="col">Dni</th>
-                    <th scope="col">Nombres</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Celular</th>
-                    <th scope="col">Boleta</th>
-                    <th scope="col">Tienda</th>
-                    <th scope="col">Puntos</th>
-                    <th scope="col"></th>
 
-                </tr>
-            </thead>
-            <tbody id="tabla">
 
-            </tbody>
-        </table>
 
-    </div>
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+    <!--===============================================================================================-->
+    <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="vendor/bootstrap/js/popper.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="vendor/select2/select2.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="vendor/tilt/tilt.jquery.min.js"></script>
+    <script>
+        $('.js-tilt').tilt({
+            scale: 1.1
+        })
+    </script>
+    <!--===============================================================================================-->
+    <script src="js/main.js"></script>
+
 </body>
 
 </html>
